--- a/client-soketio/src/app/app.component.html
+++ b/client-soketio/src/app/app.component.html
@@ -1,6 +1,26 @@
-<input  (keyup)="$event.keyCode == 13 && sendMessage(message)" #message/>
-<button (click)="sendMessage(message)">Send Message</button>
+<input  (keyup)="$event.keyCode == 13 && chiave(loco)" #loco/>
+<button (click)="chiave(loco)">imposta chiave</button>
 
-<div *ngFor = "let message of messageList">
-  {{message}}
+<br>
+
+<form #myForm="ngForm" (submit)="sendMessage(myForm.value)" novalidate>
+    <div>
+       <input id="cesar" type="radio" value="cesar" name="messageType" ngModel>
+       <label  for="cesar">Cesar</label>
+    </div>
+
+    <div>
+       <input id="t-des" type="radio" value="t-des" name="messageType" ngModel>
+       <label for="t-des">Triple Des</label>
+    </div>
+
+    <input type="text" id="message"  [(ngModel)]="message" name="message">
+
+    <button type="submit" >Encrypt</button>
+ </form><!-- Form ends -->
+
+ <hr>
+
+<div *ngFor="let message of messageList">
+    {{message}}
 </div>
